Alignment issue and color picker component updated

--- a/richtexteditor/src/components/commonComponents/colorPicker/ColorPicker.css
+++ b/richtexteditor/src/components/commonComponents/colorPicker/ColorPicker.css
@@ -19,3 +19,7 @@
     cursor: pointer;
 }
 
+.color-label{
+    border: none;
+    cursor: pointer;
+}
